add exception handler and simple cache.
